--- a/Project1/index.html
+++ b/Project1/index.html
@@ -3,12 +3,26 @@
     <head>
         <title>Hello World!</title>
         <meta charset="utf-8">
-
+        <style>
+            html {
+                background-color:#024029 ;
+            }
+            body {
+                width: 1200px;
+                margin: 20px auto;
+                padding: 20px;
+                border: 4px solid #000;
+                background-color: #fff;
+                text-align: center;
+            }
+        </style>
     </head>
+
     <body>
         <h1>Hello World!</h1>
         <p>Welcome to my first web page! </p>
         <img scr="images/world.png" alt="Hello World">
         <p>&copy; 2021 Hello World Webpage</p>
     </body>
+
 </html>
