--- a/Project2/index.html
+++ b/Project2/index.html
@@ -4,24 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Widgets and Things</title>
-    <Style>
-        body{
-        background-color:red;
-        }
-
-    </Style>
+    <title>Harley Cross MUA</title>
+   <link rel="stylesheet" href="css/style.css">
+  
 </head>
 <body>
+    <div id="container">
     <header>
-      <img src="images/logo.svg" alt="Widgets and Things Logo">
+      <img src="images/Harley Cross (500 × 200 px).png" alt="Cross Mua logo">
     </header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="contact.html">Contact</a>
+    
+       <a href="index.html">Home</a>
+       <a href="about.html">About</a>
+       <a href="portfolio.html">Portfolio</a>
+       <a href="contact.html">Contact</a>
+    
     </nav>
-    <main></main>
-    <footer></footer>
+    <main>
+        <h2>Makeup By Harley</h2>
+        <p> 
+            Here you are able to find all of the information you need in order to confidently book me for your next special event. Please email me if you have any further questions that have not been answered here! 
+        </p>
+
+        <img src="images/2022-01-24 12_38_54.911-0600.jpg" alt="portrait">
+
+        <p> 
+            I charge $35 a person plus a $5 upcharge if I supply lashes! I will travel within a 2 hour radius but I do have a driving fee. Please message me with your address for a quote! 
+        </p>
+
+
+    </main>
+    <footer>&copy; 2022 Harley Cross MUA</footer>
+    </div>
 </body>
 </html>
