--- a/Project2/Portfolio.html
+++ b/Project2/Portfolio.html
@@ -25,15 +25,13 @@
 <main>
     <h2> Makeup Look Portfolio</h2>
 
-    <h4>Model- Spencer Dishroom </h4>
 
-        <img src="images/185657325_165907538868385_6342733375807668140_n.jpg" alt="spencer looking right" style="width:300px;">
-        <img src="images/186489860_165907495535056_998926285211875206_n.jpg" alt="Spencer looking left" style="width:300px;">
-
-    <h4> Bridesmaids </h4>
-
-        <img src="images/245102697_279081920884279_2110188225168521705_n.jpg" alt="Bridesmaids" style="width:300px;">
-        <img src="images/245266772_279081984217606_4466061120205769826_n.jpg"   alt="Bridesmaids" style="width: 300px;">
+        <a href="Simple.html">
+        <img Alt= simplemakeuplooks src="images/Simple Photoshoot Makeup (1).png">
+        </a>
+        <a href="bridesmaid.html">
+            <img Alt= BridesmaidMakeup src="images/Simple Photoshoot Makeup (2).png">
+        </a>
 
 </main>
         <footer>&copy; 2022 Harley Cross MUA</footer>
