--- a/Project2/Simple.html
+++ b/Project2/Simple.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Photoshoot Makeup</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport"
+  content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div id="container">
         <Header>
-            <img src="images/Harley Cross (500 × 200 px).png" alt="Cross Mua logo">
+            <img src="images/Harley Cross.png" alt="Cross Mua logo">
         </Header>
         <nav>
         
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="artistsbio.html">Artist's Bio</a>
             <a href="Portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
          
@@ -23,8 +25,8 @@
          <main>
          <h2>Simple Photoshoot Makeup</h2>
          <p>
-             <img src="images/185657325_165907538868385_6342733375807668140_n.jpg" alt="spencer dishroom photoshoot makeup" style="width: 300px;">
-             <img src="images/186489860_165907495535056_998926285211875206_n.jpg" alt="spencer dishroom photoshoot makeup" style="width: 300px;">
+             <img src="images/spencer turned left.jpg" alt="spencer dishroom photoshoot makeup" style="width: 300px;">
+             <img src="images/Spencer turned right.jpg" alt="spencer dishroom photoshoot makeup" style="width: 300px;">
          </p>
          </main>
          <footer>&copy; 2022 Harley Cross MUA</footer>
