--- a/Project2/bridesmaid.html
+++ b/Project2/bridesmaid.html
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bridesmaid makeup</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport"
+  content="width=device-width, initial-scale=1.0">
   
 
 </head>
 <body>
     <div id="container">
         <header>
-            <img src="images/Harley Cross (500 × 200 px).png" alt="Cross Mua logo">
+            <img src="images/Harley Cross.png" alt="Cross Mua logo">
         </header>
          <nav>
     
        <a href="index.html">Home</a>
-       <a href="about.html">About</a>
+       <a href="artistsbio.html">Artist's Bio</a>
        <a href="Portfolio.html">Portfolio</a>
        <a href="contact.html">Contact</a>
     
@@ -26,8 +28,8 @@
     <main>
         <h2>Bridesmaid Makeup Looks </h2>
         <p>
-            <img src="images/245102697_279081920884279_2110188225168521705_n.jpg" alt="bridesmaid makeup" style="width: 300px;">
-             <img src="images/245266772_279081984217606_4466061120205769826_n.jpg" alt="Bridesmaid Makeup" style="width: 300px;">
+            <img src="images/bridesmaid turned left.jpg" alt="bridesmaid makeup" style="width: 300px;">
+             <img src="images/Bridesmaid turned right.jpg" alt="Bridesmaid Makeup" style="width: 300px;">
 
         </p>
     </main>
