--- a/Project2/Contact.html
+++ b/Project2/Contact.html
@@ -22,13 +22,13 @@
        <a href="contact.html">Contact</a>    
          </nav>
     <h2> Contact Me</h2>
-    <p> There are many ways that you can reach me as I am very active on social media and my email. <br>
+    <p style="font-size: 6mm;"> There are many ways that you can reach me as I am very active on social media and my email. <br>
    The easiest way to contact me is through my makeup page on facebook which I am on multiple times a day. <br>
    I love when people reach out so feel free to with any questions you may have!
    <br>
    <br>
-
-    <a class="sm" target="_new" href="https://www.facebook.com/harleymuajourney">facebook</a> 
+   <br>  
+    <a class="sm" target="_new" href="https://www.facebook.com/harleymuajourney">Facebook</a> 
    
     <a class="sm1" target="_new"href="https://www.instagram.com/harleymuajourney/">Instagram</a> 
 
