--- a/Project2/Simple.html
+++ b/Project2/Simple.html
@@ -24,10 +24,14 @@
          </nav>
          <main>
          <h2>Simple Photoshoot Makeup</h2>
-         <p>
-             <img src="images/spencer turned left.jpg" alt="spencer dishroom photoshoot makeup" style="width: 300px;">
-             <img src="images/Spencer turned right.jpg" alt="spencer dishroom photoshoot makeup" style="width: 300px;">
-         </p>
+         <div class="smrow">
+            <div class="simplemakeup">
+           <img src="images/spencer turned left.jpg" alt="spencer dishroom photoshoot makeup" style="width: 75%;">
+        </div>
+        <div class="simplemakeup">  
+             <img src="images/Spencer turned right.jpg" alt="spencer dishroom photoshoot makeup" style="width: 59%;">
+             </div>
+        </div>
          </main>
          <footer>&copy; 2022 Harley Cross MUA</footer>
          </div>
