--- a/Project2/bridesmaid.html
+++ b/Project2/bridesmaid.html
@@ -27,11 +27,15 @@
 
     <main>
         <h2>Bridesmaid Makeup Looks </h2>
-        <p>
-            <img src="images/bridesmaid turned left.jpg" alt="bridesmaid makeup" style="width: 300px;">
-             <img src="images/Bridesmaid turned right.jpg" alt="Bridesmaid Makeup" style="width: 300px;">
-
-        </p>
+        <div class="smrow">
+            <div class="simplemakeup">
+            <img src="images/bridesmaid turned left.jpg" alt="Harley Cross Makeup artist does bridesmaid makeup" style="width: 60%;">
+        </div>
+        <div class="simplemakeup"> 
+             <img src="images/Bridesmaid turned right.jpg" alt="Harley Cross Makeup artist does Bridesmaid Makeup" style="width: 60%;">
+            </div>
+        </div>
+       
     </main>
     <footer>&copy; 2022 Harley Cross MUA</footer>
     </div>
