--- a/Project2/Portfolio.html
+++ b/Project2/Portfolio.html
@@ -29,10 +29,10 @@
 
 
         <a href="Simple.html">
-        <img Alt= simplemakeuplooks src="images/simple photoshoot makeup.png">
+        <img Alt= simplemakeuplooks src="images/simple photoshoot makeup.png" style="width:30%;">
         </a>
         <a href="bridesmaid.html">
-            <img Alt= BridesmaidMakeup src="images/Simple Photoshoot Makeup .png">
+            <img Alt= BridesmaidMakeup src="images/Simple Photoshoot Makeup .png" style="width:30%;">
         </a>
 
 </main>
