--- a/Project2/Contact.html
+++ b/Project2/Contact.html
@@ -19,7 +19,7 @@
        <a href="index.html">Home</a> 
        <a href="artistsbio.html">Artist's Bio</a> 
        <a href="Portfolio.html">Portfolio</a> 
-       <a href="contact.html">Contact</a>    
+       <a href="Contact.html">Contact</a>    
          </nav>
     <h2> Contact Me</h2>
     <p style="font-size: 6mm;"> There are many ways that you can reach me as I am very active on social media and my email. <br>
