--- a/Project2/artistsbio.html
+++ b/Project2/artistsbio.html
@@ -20,7 +20,7 @@
         <a href="index.html">Home</a>
         <a href="artistsbio.html">Artist's Bio</a>
         <a href="Portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <a href="Contact.html">Contact</a>
      
      </nav>
     <main>
