photo name update

--- a/Project2/Portfolio.html
+++ b/Project2/Portfolio.html
@@ -14,7 +14,7 @@
 <body>
     <div id="container">
         <header>
-            <img src="images/Harley Cross.png" alt="Cross Mua logo">
+            <img src="images/HarleyCross.png" alt="Cross Mua logo">
         </header>
           <nav>
              
@@ -29,10 +29,10 @@
 
 
         <a href="Simple.html">
-        <img Alt= simplemakeuplooks src="images/simple photoshoot makeup.png" style="width:30%;">
+        <img Alt= simplemakeuplooks src="images/simplephotoshootmakeup.png" style="width:30%;">
         </a>
         <a href="bridesmaid.html">
-            <img Alt= BridesmaidMakeup src="images/Simple Photoshoot Makeup .png" style="width:30%;">
+            <img Alt= BridesmaidMakeup src="images/SimplePhotoshootMakeup1.png" style="width:30%;">
         </a>
 
 </main>
