--- a/Project2/Simple.html
+++ b/Project2/Simple.html
@@ -12,7 +12,7 @@
 <body>
     <div id="container">
         <Header>
-            <img src="images/Harley Cross.png" alt="Cross Mua logo">
+            <img src="images/HarleyCross.png" alt="Cross Mua logo">
         </Header>
         <nav>
         
@@ -26,10 +26,10 @@
          <h2>Simple Photoshoot Makeup</h2>
          <div class="smrow">
             <div class="simplemakeup">
-           <img src="images/spencer turned left.jpg" alt="spencer dishroom photoshoot makeup" style="width: 75%;">
+           <img src="images/spencerturnedleft.jpg" alt="spencer dishroom photoshoot makeup" style="width: 75%;">
         </div>
         <div class="simplemakeup">  
-             <img src="images/Spencer turned right.jpg" alt="spencer dishroom photoshoot makeup" style="width: 59%;">
+             <img src="images/Spencerturnedright.jpg" alt="spencer dishroom photoshoot makeup" style="width: 59%;">
              </div>
         </div>
          </main>
