--- a/Project2/bridesmaid.html
+++ b/Project2/bridesmaid.html
@@ -14,7 +14,7 @@
 <body>
     <div id="container">
         <header>
-            <img src="images/Harley Cross.png" alt="Cross Mua logo">
+            <img src="images/HarleyCross.png" alt="Cross Mua logo">
         </header>
          <nav>
     
@@ -29,10 +29,10 @@
         <h2>Bridesmaid Makeup Looks </h2>
         <div class="smrow">
             <div class="simplemakeup">
-            <img src="images/bridesmaid turned left.jpg" alt="Harley Cross Makeup artist does bridesmaid makeup" style="width: 60%;">
+            <img src="images/bridesmaidturnedleft.jpg" alt="Harley Cross Makeup artist does bridesmaid makeup" style="width: 60%;">
         </div>
         <div class="simplemakeup"> 
-             <img src="images/Bridesmaid turned right.jpg" alt="Harley Cross Makeup artist does Bridesmaid Makeup" style="width: 60%;">
+             <img src="images/Bridesmaidturnedright.jpg" alt="Harley Cross Makeup artist does Bridesmaid Makeup" style="width: 60%;">
             </div>
         </div>
        
