--- a/Project2/index.html
+++ b/Project2/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="container">
         <header>
-            <img src="images/Harley Cross.png" alt="Cross Mua logo">
+            <img src="images/HarleyCross.png" alt="Cross Mua logo">
         </header>
          <nav>
        <a href="index.html">Home</a> 
@@ -30,10 +30,10 @@
             </p>
             <div class="row">
                 <div class="column">
-                  <img src="images/Harley Self Portrait.jpg" alt="Harley Cross portrait" style="width:88%">
+                  <img src="images/HarleySelfPortrait.jpg" alt="Harley Cross portrait" style="width:88%">
                 </div>
                 <div class="column">
-                  <img src="images/Urban Decay portrait.jpg" alt="Harley Cross Urban Decay Wild Greens portrait" style="width:100%">
+                  <img src="images/UrbanDecayportrait.jpg" alt="Harley Cross Urban Decay Wild Greens portrait" style="width:100%">
                 </div>
                 
               </div>
