--- a/Project2/Contact.html
+++ b/Project2/Contact.html
@@ -28,11 +28,11 @@
    <br>
    <br>
    <br>  
-    <a class="sm" target="_new" href="https://www.facebook.com/harleymuajourney">Facebook</a> 
+    <a class="sm"  href="https://www.facebook.com/harleymuajourney">Facebook</a> 
    
-    <a class="sm1" target="_new"href="https://www.instagram.com/harleymuajourney/">Instagram</a> 
+    <a class="sm1" href="https://www.instagram.com/harleymuajourney/">Instagram</a> 
 
-    <a class="sm2" target="_new" href="https://wa.me/message/YODGP42FE7BLI1">Whattsapp</a> 
+    <a class="sm2"  href="https://wa.me/message/YODGP42FE7BLI1">Whattsapp</a> 
 
 
 </p>
