--- a/Project2/Contact.html
+++ b/Project2/Contact.html
@@ -22,21 +22,21 @@
        <a href="Contact.html">Contact</a>    
          </nav>
     <h2> Contact Me</h2>
-    <p style="font-size: 6mm;"> There are many ways that you can reach me as I am very active on social media and my email. <br>
+    <p> There are many ways that you can reach me as I am very active on social media and my email. <br>
    The easiest way to contact me is through my makeup page on facebook which I am on multiple times a day. <br>
    I love when people reach out so feel free to with any questions you may have!
    <br>
    <br>
    <br>  
-    <a class="sm"  href="https://www.facebook.com/harleymuajourney">Facebook</a> 
+    <a class="fb"  href="https://www.facebook.com/harleymuajourney">Facebook</a> 
    
-    <a class="sm1" href="https://www.instagram.com/harleymuajourney/">Instagram</a> 
+    <a class="insta" href="https://www.instagram.com/harleymuajourney/">Instagram</a> 
 
-    <a class="sm2"  href="https://wa.me/message/YODGP42FE7BLI1">Whattsapp</a> 
+    <a class="what"  href="https://wa.me/message/YODGP42FE7BLI1">Whattsapp</a> 
 
 
 </p>
-<footer>&copy; 2022 Harley Cross MUA</footer>
+<footer> &copy; 2022 Harley Cross MUA </footer>
     </div>
 </body>
 </html>
