--- a/Project2/Portfolio.html
+++ b/Project2/Portfolio.html
@@ -27,12 +27,12 @@
 <main>
     <h2> Makeup Look Portfolio</h2>
 
-
-        <a href="Simple.html">
-        <img Alt= simplemakeuplooks src="images/simplephotoshootmakeup.png" style="width:30%;">
+        <p> This a portfolio of makeup looks I have done in the past and is updated frequently. If there is a look that you would like to see me do that is not present here please message me and we may be able to do a practice run of the makeup for your special event.  </p>
+        <a  href="Simple.html">
+        <img class="piclinks" Alt= simplemakeuplooks src="images/simplephotoshootmakeup.png" >
         </a>
-        <a href="bridesmaid.html">
-            <img Alt= BridesmaidMakeup src="images/SimplePhotoshootMakeup1.png" style="width:30%;">
+        <a  href="bridesmaid.html">
+            <img class="piclinks" Alt= BridesmaidMakeup src="images/SimplePhotoshootMakeup1.png">
         </a>
 
 </main>
