--- a/Project2/Simple.html
+++ b/Project2/Simple.html
@@ -24,12 +24,13 @@
          </nav>
          <main>
          <h2>Simple Photoshoot Makeup</h2>
+         <p> Model: Spencer Dishroom</p>
          <div class="smrow">
-            <div class="simplemakeup">
-           <img src="images/spencerturnedleft.jpg" alt="spencer dishroom photoshoot makeup" style="width: 75%;">
+            <div>
+           <img class="spencerleft" src="images/spencerturnedleft.jpg" alt="spencer dishroom photoshoot makeup" >
         </div>
-        <div class="simplemakeup">  
-             <img src="images/Spencerturnedright.jpg" alt="spencer dishroom photoshoot makeup" style="width: 59%;">
+        <div >  
+             <img class="spencerright" src="images/Spencerturnedright.jpg" alt="spencer dishroom photoshoot makeup" >
              </div>
         </div>
          </main>
