--- a/Project2/bridesmaid.html
+++ b/Project2/bridesmaid.html
@@ -28,11 +28,11 @@
     <main>
         <h2>Bridesmaid Makeup Looks </h2>
         <div class="smrow">
-            <div class="simplemakeup">
-            <img src="images/bridesmaidturnedleft.jpg" alt="Harley Cross Makeup artist does bridesmaid makeup" style="width: 60%;">
+            <div>
+            <img class="bridesmaid1" src="images/bridesmaidturnedleft.jpg" alt="Harley Cross Makeup artist does bridesmaid makeup">
         </div>
-        <div class="simplemakeup"> 
-             <img src="images/Bridesmaidturnedright.jpg" alt="Harley Cross Makeup artist does Bridesmaid Makeup" style="width: 60%;">
+        <div> 
+             <img class="bridesmaid1" src="images/Bridesmaidturnedright.jpg" alt="Harley Cross Makeup artist does Bridesmaid Makeup">
             </div>
         </div>
        
