--- a/Project3/index.html
+++ b/Project3/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Oswald:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     
 </head>
 
