--- a/Project2/Contact.html
+++ b/Project2/Contact.html
@@ -15,15 +15,18 @@
         <header>
             <img src="images/HarleyCross.png" alt="Cross Mua logo">
         </header>
-         <nav>
-       <a href="index.html">Home</a> 
-       <a href="artistsbio.html">Artist's Bio</a> 
-       <a href="Portfolio.html">Portfolio</a> 
-       <a href="Contact.html">Contact</a>    
-         </nav>
+        <nav>
+          <ul>
+   <li> <a href="index.html">Home</a> </li>
+   <li>   <a href="artistsbio.html">Artist's Bio</a> </li>
+   <li>  <a href="Portfolio.html">Portfolio</a> </li>
+   <li>  <a href="Contact.html">Contact</a>   </li>
+          </ul> 
+      </nav>
+      
     <h2> Contact Me</h2>
-    <p> There are many ways that you can reach me as I am very active on social media and my email. <br>
-   The easiest way to contact me is through my makeup page on facebook which I am on multiple times a day. <br>
+    <p> There are many ways that you can reach me as I am very active on social media and my email. 
+   The easiest way to contact me is through my makeup page on facebook which I am on multiple times a day. 
    I love when people reach out so feel free to with any questions you may have!
    <br>
    <br>
