--- a/Project2/Portfolio.html
+++ b/Project2/Portfolio.html
@@ -15,14 +15,14 @@
     <div id="container">
         <header>
             <img src="images/HarleyCross.png" alt="Cross Mua logo">
-        </header>
-          <nav>
-             
-             <a href="index.html">Home</a>
-             <a href="artistsbio.html">Artist's Bio</a>
-             <a href="Portfolio.html">Portfolio</a>
-             <a href="Contact.html">Contact</a>
-          
+        </header>  
+            <nav>
+                <ul>
+         <li> <a href="index.html">Home</a> </li>
+         <li>   <a href="artistsbio.html">Artist's Bio</a> </li>
+         <li>  <a href="Portfolio.html">Portfolio</a> </li>
+         <li>  <a href="Contact.html">Contact</a>   </li>
+                </ul> 
             </nav>
 <main>
     <h2> Makeup Look Portfolio</h2>
