--- a/Project2/Simple.html
+++ b/Project2/Simple.html
@@ -15,13 +15,14 @@
             <img src="images/HarleyCross.png" alt="Cross Mua logo">
         </Header>
         <nav>
+            <ul>
+     <li> <a href="index.html">Home</a> </li>
+     <li>   <a href="artistsbio.html">Artist's Bio</a> </li>
+     <li>  <a href="Portfolio.html">Portfolio</a> </li>
+     <li>  <a href="Contact.html">Contact</a>   </li>
+            </ul> 
+        </nav>
         
-            <a href="index.html">Home</a>
-            <a href="artistsbio.html">Artist's Bio</a>
-            <a href="Portfolio.html">Portfolio</a>
-            <a href="Contact.html">Contact</a>
-         
-         </nav>
          <main>
          <h2>Simple Photoshoot Makeup</h2>
          <p> Model: Spencer Dishroom</p>
