--- a/Final/Museums.html
+++ b/Final/Museums.html
@@ -53,7 +53,7 @@
                 1148 West Main Street Monteagle, TN 37356 <br>
                 931-308-7854 <br>
                 <a class="Museum" href="https://wernermilitarymuseum.com/"> Werner Military Museum Website</a>
-                <img class="mpic" src="images/military Museum.jpeg" alt=" Sam H werner military Museum">
+                <img class="mpic" src="images/militarymuseum.jpeg" alt=" Sam H werner military Museum">
             </p>
             </div>
             <div class="col">
